--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -3,7 +3,7 @@ cabal-version:       >=1.10
 -- init'.  For further documentation, see
 -- http://haskell.org/cabal/users-guide/
 
-name:                AdventOfCode
+name:                AdventOfCode2020
 version:             0.1.0.0
 -- synopsis:
 -- description:
@@ -19,8 +19,11 @@ extra-source-files:  CHANGELOG.md
 
 executable AdventOfCode
   main-is:             Main.hs
-  -- other-modules:
+  other-modules:       AdventOfCode,
+                       Day1
   -- other-extensions:
-  build-depends:       base >=4.13 && <4.14
+  build-depends:       base >=4.13 && <4.14,
+                       containers
   -- hs-source-dirs:
   default-language:    Haskell2010
+  extensions:          LambdaCase
