--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -20,10 +20,13 @@ extra-source-files:  CHANGELOG.md
 executable AdventOfCode
   main-is:             Main.hs
   other-modules:       AdventOfCode,
-                       Day1
+                       Day1,
+                       Day2
   -- other-extensions:
   build-depends:       base >=4.13 && <4.14,
-                       containers
+                       containers,
+                       text,
+                       attoparsec
   -- hs-source-dirs:
   default-language:    Haskell2010
   extensions:          LambdaCase
