--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -21,7 +21,8 @@ executable AdventOfCode
   main-is:             Main.hs
   other-modules:       AdventOfCode,
                        Day1,
-                       Day2
+                       Day2,
+                       Day3
   -- other-extensions:
   build-depends:       base >=4.13 && <4.14,
                        containers,
