--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -22,7 +22,8 @@ executable AdventOfCode
   other-modules:       AdventOfCode,
                        Day1,
                        Day2,
-                       Day3
+                       Day3,
+                       Day4
   -- other-extensions:
   build-depends:       base >=4.13 && <4.14,
                        containers,
