--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -23,7 +23,8 @@ executable AdventOfCode
                        Day1,
                        Day2,
                        Day3,
-                       Day4
+                       Day4,
+                       Day5
   -- other-extensions:
   build-depends:       base >=4.13 && <4.14,
                        containers,
