--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -24,7 +24,8 @@ executable AdventOfCode
                        Day2,
                        Day3,
                        Day4,
-                       Day5
+                       Day5,
+                       Day6
   -- other-extensions:
   build-depends:       base >=4.13 && <4.14,
                        containers,
