--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -25,7 +25,8 @@ executable AdventOfCode
                        Day3,
                        Day4,
                        Day5,
-                       Day6
+                       Day6,
+                       Day7
   -- other-extensions:
   build-depends:       base >=4.13 && <4.14,
                        containers,
@@ -33,4 +34,5 @@ executable AdventOfCode
                        attoparsec
   -- hs-source-dirs:
   default-language:    Haskell2010
-  extensions:          LambdaCase
+  extensions:          LambdaCase,
+                       OverloadedStrings
