--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -26,12 +26,14 @@ executable AdventOfCode
                        Day4,
                        Day5,
                        Day6,
-                       Day7
+                       Day7,
+                       Day8
   -- other-extensions:
   build-depends:       base >=4.13 && <4.14,
                        containers,
                        text,
-                       attoparsec
+                       attoparsec,
+                       vector
   -- hs-source-dirs:
   default-language:    Haskell2010
   extensions:          LambdaCase,
