--- a/AdventOfCode2020.cabal
+++ b/AdventOfCode2020.cabal
@@ -27,7 +27,8 @@ executable AdventOfCode
                        Day5,
                        Day6,
                        Day7,
-                       Day8
+                       Day8,
+                       Day9
   -- other-extensions:
   build-depends:       base >=4.13 && <4.14,
                        containers,
